--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -45,7 +45,6 @@ body {
 
 .horiz-list {
   list-style-type: none;
-  overflow: hidden;
   display: flex;
   justify-content: space-between;
 }
